# bridge

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md
include/: bridge_Event.h  bridge_System.h  bridge_Types.h
src/: bridge_Event.cpp  bridge_EventManager.cpp  bridge_EventManager.h  bridge_System.cpp  bridge_SystemWin32.cpp  bridge_SystemWin32.h  bridge_SystemX11.cpp  bridge_SystemX11.h
